// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup: Component should render correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <ContextProvider
    value={
      Object {
        "customCheckedStyles": Object {},
        "customLabelStyles": Object {},
        "name": "radio",
        "onChange": [Function],
        "value": null,
      }
    }
  >
    <RadioBaseComponent
      id="label 1"
      label="label 1"
      value="value 1"
    >
      label 1
    </RadioBaseComponent>
    <RadioBaseComponent
      id="label 2"
      label="label 2"
      value="value 2"
    >
      label 2
    </RadioBaseComponent>
  </ContextProvider>
</div>
`;

exports[`RadioGroup: Component should render with custom styles 1`] = `
<div
  style={
    Object {
      "background": "blue",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <ContextProvider
    value={
      Object {
        "customCheckedStyles": Object {
          "opacity": 0.9,
        },
        "customLabelStyles": Object {
          "background": "red",
        },
        "name": "radio",
        "onChange": [Function],
        "value": null,
      }
    }
  >
    <RadioBaseComponent
      id="label 1"
      label="label 1"
      value="value 1"
    >
      label 1
    </RadioBaseComponent>
    <RadioBaseComponent
      id="label 2"
      label="label 2"
      value="value 2"
    >
      label 2
    </RadioBaseComponent>
  </ContextProvider>
</div>
`;
